force-app/main/default/objects/PositiveOrderStatus__c/PositiveOrderStatus__c.object-meta.xml
<CustomObject>
    <label>Positive Order Status</label>
    <nameField>
        <label>Positive Order Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positive Order Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>