force-app/main/default/objects/PositiveOrderStatus__c/fields/FulfillmentOrder__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order</label>
    <referenceTo>FulfillmentOrder</referenceTo>
    <relationshipLabel>Positive Order Statuses</relationshipLabel>
    <relationshipName>Positive_Order_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>