force-app/main/default/objects/PositiveOrderStatus__c/fields/IsImported__c.field-meta.xml
<CustomField>
    <fullName>IsImported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is imported from Positive Fulfillment Service</description>
    <inlineHelpText>Is imported from Positive Fulfillment Service(PFS)</inlineHelpText>
    <label>Is Imported</label>
    <type>Checkbox</type>
</CustomField>