force-app/main/default/objects/PositiveOrderStatus__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <description>Positive Fulfillment Service Order Id</description>
    <inlineHelpText>PFS Order Id</inlineHelpText>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>